--- a/testingback/cursoTestingBack/pom.xml
+++ b/testingback/cursoTestingBack/pom.xml
@@ -35,6 +35,7 @@
             <groupId>io.cucumber</groupId>
             <artifactId>cucumber-java</artifactId>
             <version>7.14.0</version>
+            <scope>test</scope>
         </dependency>
         <!-- Me permite llamar a cucumber desde JUNIT platform -->
         <dependency>
@@ -50,6 +51,14 @@
             <version>1.10.0</version>
             <scope>test</scope>
         </dependency>
+        <!-- Nos permite gennerar test de JUNIT parametrizados -->
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-params</artifactId>
+            <version>5.10.0</version>
+            <scope>test</scope>
+        </dependency>
+
 
     </dependencies>
 
